<resources>
    <string name="app_name">Template</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_empty_state_text">It\'s lonely here</string>
    <string name="menu_categories">Categories</string>
    <string name="img_lock_content_description">Shows that this category is locked</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_rate_this_app">Rate this app</string>
    <string name="title_share_this_app">Share with friends</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_open_source">Open source licences</string>
    <string name="title_more_apps">More apps</string>
    <string name="title_contact">Contact us</string>
    <string name="title_nav_end">Menu</string>
    <string name="menu_more">More Options</string>

    <string name="contact_us_close_dialog">Close</string>
    <string name="contact_us_dialog_positive_text">Send Message</string>
    <string name="feedback_failed_to_send_msg">You are offline. Connect to the internet to send feedback</string>
    <string name="feedback_sent_msg">Feedback sent successfully</string>

    <string name="share_msg">Share with…</string>
    <string name="share_text">Hey, check out this awesome app!\n%s</string>
    <string name="whats_app_not_installed_error_message">Whatsapp was not found, please install and try again</string>
    <string name="facebook_not_installed_error_message">Facebook app was not found, please install and try again</string>
    <string name="twitter_not_installed_error_message">Twitter app was not found, please install and try again</string>
    <string name="other_share_error_message">An error occurred while sharing, please try again</string>
    <string name="share_with">Share with…</string>

    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate now</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="open_playstore_with">Open with</string>
    <string name="favorite_title_subcategories">Subcategories</string>
    <string name="favorite_title_categories">Categories</string>
    <string name="favorite_title_cards">Cards</string>
    <string name="subcategory_remove_from_favorites">Remove from favorites</string>
    <string name="subcategory_add_to_favorites">Add to favorites</string>
    <string name="internet_error_message">Request failed.Please check your internet connection</string>
    <string name="general_error_message">An error occurred. Please try again and contact us</string>
    <string name="card_detail_title">Slide show</string>
    <string name="share_image_text">Download %1$s for more %2$s</string>

    <string name="allow_permission">Allow Permission</string>
    <string name="allow_permission_msg">For the app to share image, it needs to store the image on your device</string>
    <string name="permission_denied">For the app to work as expected, please allow the permission</string>
    <string name="permission_never_ask">To use this feature, allow the permissions in settings</string>
    <string name="swipe_down_msg">%s\nSwipe down to refresh</string>
    <string name="category_locked_msg">Category locked. Watch a video to unlock</string>
    <string name="watch_video_dialog_title">Unlock Content</string>
    <string name="watch_video_dialog_msg">Watch video to unlock?</string>
    <string name="watch_video_dialog_confirm_text">Yes</string>
    <string name="watch_video_dialog_cancel_btn_text">No</string>
    <string name="video_not_loaded_error_msg">Video not loaded, please try again after some time</string>
    <string name="btn_exit_text">Exit</string>
    <string name="rate_us_btn_text">Rate us</string>
    <string name="press_to_exit">Press again to exit</string>
    <string name="remote_update_failed_msg">Error occurred while updating.</string>
</resources>
